--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ button:hover {
 <!-- SLIDE 1 -->
 <div class="slide active" id="slide1">
   <div class="content">
-    <img src="C:\Users\kapad\Downloads\download (17).jpg">
+    <img src="rose.jpg">
     <div class="text">
       <h1 class="big-love">Happy Monthsary Baby 💕</h1>
       <p>
@@ -239,14 +239,14 @@ button:hover {
         <button onclick="go(3)">Next 💗</button>
       </div>
     </div>
-    <img src="C:\Users\kapad\Downloads\download (15).jpg">
+    <img src="billa.jpg">
   </div>
 </div>
 
 <!-- SLIDE 3 -->
 <div class="slide" id="slide3">
   <div class="content">
-    <img src="C:\Users\kapad\Downloads\Cat Sticker - Cat - Descubre y comparte GIF.gif" alt="Dancing GIF">
+    <img src="dance.gif" alt="Dancing GIF">
 
     <div class="text">
       <h1 class="playful">Song for You 🎶</h1>
@@ -287,7 +287,7 @@ button:hover {
         <button class="restart" onclick="go(1)">Once More 💖</button>
       </div>
     </div>
-    <img src="C:\Users\kapad\OneDrive\Pictures\Screenshots\Screenshot 2026-01-18 200348.png">
+    <img src="babu.png">
   </div>
 </div>
 
@@ -300,3 +300,4 @@ function go(n) {
 
 </body>
 </html>
+
