--- a/index.html
+++ b/index.html
@@ -250,6 +250,9 @@ button:hover {
 
     <div class="text">
       <h1 class="playful">Song for You 🎶</h1>
+      <audio autoplay loop>
+  <source src="song.mp3" type="audio/mpeg">
+</audio>
 
       <div class="lyrics-box">
         <div class="lyrics">
@@ -300,4 +303,5 @@ function go(n) {
 
 </body>
 </html>
+
 
