--- a/index.html
+++ b/index.html
@@ -263,9 +263,10 @@ button:hover {
   ▶ Tap to Play Song
 </button>
 
-<audio id="mysong">
+<audio id="mysong" loop preload="auto">
   <source src="song.mp3" type="audio/mpeg">
 </audio>
+
 
 
       <div class="lyrics-box">
@@ -328,6 +329,7 @@ function playSong() {
 
 </body>
 </html>
+
 
 
 
